# daimon

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  Dockerfile  Makefile  README.md  config.yaml  go.mod  go.sum  mkdocs.yml
.github/workflows/: docs.yml  publish-java.yml  publish-python.yml  publish-typescript.yml  release.yml
cmd/daimon/: main.go  root.go  run.go  serve.go  sidecar.go
cmd/sidecar/: main.go
docs/: api.md  configuration.md  development.md  index.md  mcp.md  observability.md  quickstart.md  rag.md
docs/configuration/: components.md  index.md  mcp-servers.md  telemetry.md
docs/providers/: anthropic.md  gemini.md  llamacpp.md  mistral.md  openai.md
docs/sdk/: java.md  python.md  typescript.md
docs/stores/: index.md
examples/: config.yaml
examples/client/: chat.py  chat_async.py
examples/k8s/: sidecar.yaml
internal/config/: config.go  config_test.go
internal/conversation/: conversation.go  registry.go  registry_test.go
internal/embedding/: embedding.go  registry.go  registry_test.go
internal/mcp/: client.go
internal/memory/: graph.go  memory.go  registry.go  registry_test.go
internal/server/: graph_handler.go  graph_handler_test.go  handler.go  handler_test.go  memory_handler.go  memory_handler_test.go  server.go  session.go
internal/session/: inmemory.go  inmemory_test.go  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/daimon_client/: __init__.py  _async_client.py  _client.py  _llm_client.py  _stores.py  _types.py  _utils.py
sdk/python/tests/: test_client.py  test_e2e.py  test_stores.py  test_types.py
(+77 files in other folders)
