[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daimon-client"
version = "0.0.1"
description = "Python client for the daimon AI sidecar"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "anyio"]

[tool.hatch.build.targets.wheel]
packages = ["daimon_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
