[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daimon-client"
version = "0.2.0"
description = "Python client for the daimon AI sidecar"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "sonicboom15", email = "rishikumar15@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/sonicboom15/daimon"
Source = "https://github.com/sonicboom15/daimon"
"Bug Tracker" = "https://github.com/sonicboom15/daimon/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "anyio"]

[tool.hatch.build.targets.wheel]
packages = ["daimon_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
